<resources>
    <!-- Manifest -->
    <string name="app_name">Prevoir</string>
    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_tasks">Tasks</string>
    <string name="menu_voidblocks">Void Blocks</string>
    <string name="menu_settings">Settings</string>

    <string name="action_settings">Settings</string>

    <!-- Create Task and Helper Activity -->
    <string name="field_text_task_name_hint">Name</string>
    <string name="text_view_task_name">Name:</string>

    <string name="field_text_subject_name_hint">Subject Name</string>
    <string name="text_view_subject_name">Subject:</string>

    <string name="field_text_description_hint">Description</string>

    <string name="text_view_repetitions">Repeat</string>
    <string name="button_repetitions_unset">Set Repeated Days</string>

    <string name="text_view_duration">Duration</string>
    <string name="text_view_hours">hours</string>
    <string name="text_view_minutes">minutes</string>

    <string name="text_view_min_time_period">Minimum time period</string>

    <string name="text_view_deadline">Deadline</string>
    <string name="text_view_deadline_per_day">Finish before</string>


    <string name="text_view_add_time">Add Time</string>


    <!-- Days of the week -->
    <string name="checkbox_monday">Monday</string>
    <string name="checkbox_tuesday">Tuesday</string>
    <string name="checkbox_wednesday">Wednesday</string>
    <string name="checkbox_thursday">Thursday</string>
    <string name="checkbox_friday">Friday</string>
    <string name="checkbox_saturday">Saturday</string>
    <string name="checkbox_sunday">Sunday</string>

    <!-- Menu main.xml -->
    <string name="nav_shuffle">Shuffle</string>
    <string name="nav_continue">Continue</string>
    <string name="nav_done">Finish</string>
    <string name="nav_copy">Duplicate</string>
    <string name="nav_delete">Delete</string>

    <!-- Strings for the dialog box -->
    <string name="dialog_confirm_delete_title">Delete Selected Tasks</string>
    <string name="dialog_confirm_delete_message">Are you sure you want to delete all the selected
    Tasks?</string>
    <string name="dialog_confirm_delete_positive">Yes</string>
    <string name="dialog_confirm_delete_negative">No</string>
    <!-- No deadline dialog -->
    <string name="dialog_no_deadline_title">Alert</string>
    <string name="dialog_no_deadline_message">Deadline is not set.</string>
    <!-- No deadline per day dialog -->
    <string name="dialog_no_deadline_per_day_title">Alert</string>
    <string name="dialog_no_deadline_per_day_message">Time to finish before is not set.</string>
    <!-- zero duration dialog -->
    <string name="dialog_zero_duration_title">Alert</string>
    <string name="dialog_zero_duration_message">Please set the duration needed for the task.</string>
    <!-- No starting time dialog -->
    <string name="dialog_no_starting_title">Alert</string>
    <string name="dialog_no_starting_message">Time when the voidblock starts is not set.</string>
    <!-- No stopping time dialog -->
    <string name="dialog_no_stopping_title">Alert</string>
    <string name="dialog_no_stopping_message">Time when the voidblock stops is not set.</string>
    <!-- Voidblock obsolete -->
    <string name="dialog_voidblock_obsolete_title">Alert</string>
    <string name="dialog_voidblock_obsolete_message">The voidblock is obsolete.</string>

    <!-- Create voidblock Activity -->
    <string name="field_text_voidblock_name_hint">Name</string>
    <string name="text_view_from">From:</string>
    <string name="text_view_to">To:</string>
    <string name="text_view_hint_timespan_unset">Tap to Set</string>
    <string name="text_view_error_time">Invalid Time Given</string>

    <!-- Schedule Fragment -->
    <string name="text_view_schedule_voidblock_label">- Voidblock -</string>
</resources>
