<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="sstinc.prevoir.CreateRepeatedDaysActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <RelativeLayout
        android:id="@+id/activity_task_create_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <CheckBox
            android:id="@+id/checkBox_monday"
            android:text="@string/checkbox_monday"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <CheckBox
            android:id="@+id/checkBox_tuesday"
            android:text="@string/checkbox_tuesday"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/checkBox_monday" />

        <CheckBox
            android:id="@+id/checkBox_wednesday"
            android:text="@string/checkbox_wednesday"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/checkBox_tuesday" />

        <CheckBox
            android:id="@+id/checkBox_thursday"
            android:text="@string/checkbox_thursday"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/checkBox_wednesday" />

        <CheckBox
            android:id="@+id/checkBox_friday"
            android:text="@string/checkbox_friday"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/checkBox_thursday" />

        <CheckBox
            android:id="@+id/checkBox_saturday"
            android:text="@string/checkbox_saturday"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/checkBox_friday" />

        <CheckBox
            android:id="@+id/checkBox_sunday"
            android:text="@string/checkbox_sunday"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/checkBox_saturday" />
    </RelativeLayout>
</ScrollView>