<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_voidblock_create"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="sstinc.prevoir.VoidblockCreateActivity">

    <EditText
        android:id="@+id/field_text_voidblock_name"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/field_text_voidblock_name_hint" />
    <LinearLayout
        android:id="@+id/layout_from"
        android:orientation="horizontal"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorFontWhitePrimary"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_view_from"/>
        <TextView
            android:id="@+id/text_view_voidblock_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorFontWhiteSecondary"
            android:hint="@string/text_view_hint_timespan_unset"
            android:textColor="@color/colorFontWhitePrimary"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_to"
        android:orientation="horizontal"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorFontWhitePrimary"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_view_to"/>
        <TextView
            android:id="@+id/text_view_voidblock_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorFontWhiteSecondary"
            android:hint="@string/text_view_hint_timespan_unset"
            android:textColor="@color/colorFontWhitePrimary"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorFontPrimary"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_view_repetitions"/>

        <Switch
            android:id="@+id/switch_voidblock_repeat"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="end" />
    </LinearLayout>

    <Button
        android:id="@+id/button_voidblock_repeats"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/button_repetitions_unset" />
</LinearLayout>
